fixed spacing issues, stuck footer to bottom of page, created new root class for easy consistent style accross website

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,14 @@
-.App {
+.main {
   /* font-size: calc(10px + 2vmin); */
-  top: 0;
-  color: white;
-  min-height: 100vh;
+  /* top: 0; */
+
+  min-height: 100%;
   position: relative;
 }
 
+.root {
+  color: white;
+}
 a.svg:after {
   content: "";
   position: absolute;
@@ -149,14 +152,21 @@ h3 {
 .Profile .footer {
   position: absolute;
   bottom: 0;
-  width: 100%;
   background-color: #727272;
   /* border: 1em solid #DCDCDC; */
   padding-left: 12px;
-  margin-left: 0px;
-  width: 97%;
+  /* margin-left: 0px; */
+  width: 95%;
 }
-
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  line-height: 60px; /* Vertically center the text there */
+  background-color: #f5f5f5;
+}
 .Home .userID,
 .Profile .userID {
   font-size: .8em;
@@ -180,8 +190,4 @@ h3 {
   background-color: #727272;
   margin-left: 0px;
   /* border: 5px solid #DCDCDC; */
-}
-
-.Home .create {
-  height: 30em;
 }
